--- a/.github/workflows/CPVU.yml
+++ b/.github/workflows/CPVU.yml
@@ -8,8 +8,8 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "main"
-  main:
+  # This workflow contains a single job called "CPVU"
+  CPVU:
     # The type of runner that the job will run on
     runs-on: windows-latest
 
