--- a/.github/workflows/CPVU.yml
+++ b/.github/workflows/CPVU.yml
@@ -40,7 +40,7 @@ jobs:
           echo ---------- CPVU.exe error log -----------
           if exist .\_TempErrorLog.txt (type .\_TempErrorLog.txt) else (echo NO ERRORS) 
           echo -----------------------------------------
-          echo --- Version Files processing error log ---
+          echo --- Thor Updates processing error log ---
           if exist .\_TempThorUpdatesErrorLog.txt (type .\_TempThorUpdatesErrorLog.txt) else (echo NO ERRORS)
           echo -----------------------------------------
 
