--- a/.github/workflows/CPVU.yml
+++ b/.github/workflows/CPVU.yml
@@ -5,6 +5,8 @@ name: Check Packages Version Updates
 on:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
+  schedule:
+      - cron: "0,15,30,45 * * * *"
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
