--- a/.github/workflows/CPVU.yml
+++ b/.github/workflows/CPVU.yml
@@ -5,8 +5,9 @@ name: Check Packages Version Updates
 on:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
+
   schedule:
-      - cron: "0 * * * *"
+      - cron: "0 * * * *" # Every hour
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
